--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,13 @@
     <title>Framework Forms</title>
   </head>
   <body>
-    <h1>Framework Forms</h1>
+    <div class='container-fluid pt-4 pb-4 pl-4 pr-4'>
+      <div class='row'>
+        <div class='col-sm-12'>
+          <h1>Framework Forms</h1>
+        </div>
+      </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
