Add edit panels partial

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
         </div>
       </div>
 
+      ${require('./partials/edit_panels.html')}
       ${require('./partials/mailing_list_signup.html')}
 
     </div>
