--- a/home.html
+++ b/home.html
@@ -1,11 +1,91 @@
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <meta name="viewport" content="width=500,initial-scale=1.0,user-scalable=yes">
-    <title>Hello ES2015</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+    <title>Framework Forms</title>
   </head>
   <body>
-    <main>
-      <p>This is not very interesting</p>
-    </main>
+    <div class='container-fluid pt-4 pb-4 pl-4 pr-4'>
+      <div class='row'>
+        <div class='col-sm-12'>
+          <h1>Framework Forms</h1>
+        </div>
+      </div>
+
+      <div class='row pt-4 pb-4'>
+
+  <div class='col-sm-6'>
+    <div class='card'>
+      <div class='card-body'>
+        <div class="form-group">
+          <label for="plainFormTextarea">Plain form HTML</label>
+          <textarea class="form-control" id="plainFormTextarea" rows="10"></textarea>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class='col-sm-6'>
+    <div class='card'>
+      <div class='card-body'>
+        <div class="form-group">
+          <label for="transformedFormTextarea">Bootstrap form HTML</label>
+          <textarea class="form-control" id="transformedFormTextarea" rows="10"></textarea>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+            <!-- Mailing list signup form -->
+      <div class='row'>
+        <div class='col-sm-12'>
+          <div class='card'>
+            <div class='card-body'>
+              <div class="card-title">
+                <h5>Stay updated about this and my other projects</h5>
+              </div>
+              <div class="card-content">
+                <!-- Begin Mailchimp Signup Form -->
+                <div id="mc_embed_signup">
+                  <form action="https://digitalronin.us20.list-manage.com/subscribe/post?u=53b6dd8cd26f64b549eabac4f&amp;id=425fff70ac" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                    <div id="mc_embed_signup_scroll">
+                      <div class="mc-field-group">
+                        <label for="mce-EMAIL">Email Address </label>
+                        <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                      </div>
+                      <div id="mce-responses" class="clear">
+                        <div class="response" id="mce-error-response" style="display:none"></div>
+                        <div class="response" id="mce-success-response" style="display:none"></div>
+                      </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                      <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_53b6dd8cd26f64b549eabac4f_425fff70ac" tabindex="-1" value=""></div>
+                      <div class="clear">
+                        <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary btn-sm">Subscribe</button>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+                <!--End mc_embed_signup-->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End Mailing list signup form -->
+
+
+    </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   <script type="text/javascript" src="application.js"></script></body>
 </html>
