Add blurb and tweak panel header text

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
       <div class='row'>
         <div class='col-sm-12'>
           <h1>Framework Forms</h1>
+          Speed up web development by automatically converting simple HTML form field tags into
+          the format required by popular web design frameworks such as
+          <a href="https://getbootstrap.com">Bootstrap</a>.
         </div>
       </div>
 
