--- a/home.html
+++ b/home.html
@@ -15,6 +15,9 @@
       <div class='row'>
         <div class='col-sm-12'>
           <h1>Framework Forms</h1>
+          Speed up web development by automatically converting simple HTML form field tags into
+          the format required by popular web design frameworks such as
+          <a href="https://getbootstrap.com">Bootstrap</a>.
         </div>
       </div>
 
@@ -24,8 +27,8 @@
     <div class='card'>
       <div class='card-body'>
         <div class="form-group">
-          <label for="plainFormTextarea">Plain form HTML</label>
-          <textarea class="form-control" id="plainFormTextarea" rows="10"></textarea>
+          <label for="plainFormTextarea"><strong>Plain form fields HTML</strong></label>
+          <textarea class="form-control" id="plainFormTextarea" rows="12"></textarea>
         </div>
       </div>
     </div>
@@ -35,8 +38,8 @@
     <div class='card'>
       <div class='card-body'>
         <div class="form-group">
-          <label for="transformedFormTextarea">Bootstrap form HTML</label>
-          <textarea class="form-control" id="transformedFormTextarea" rows="10"></textarea>
+          <label for="bootstrapHtmlTextarea"><strong>Bootstrap form fields HTML</strong></label>
+          <textarea class="form-control" id="bootstrapHtmlTextarea" rows="12"></textarea>
         </div>
       </div>
     </div>
@@ -47,6 +50,24 @@
             <!-- Mailing list signup form -->
       <div class='row'>
         <div class='col-sm-12'>
+
+                    <div class="pb-3 text-right">
+            &copy; digitalronin 2019 - 2019 &nbsp; &nbsp;
+
+            <a href="https://github.com/digitalronin/framework-forms">
+              <img height="20" width="20" src="https://proxy.duckduckgo.com/ip3/github.com.ico" alt="github logo" />
+            </a>
+
+            <a href="https://twitter.com/digitalronin">
+              <img height="24" width="24" src="https://proxy.duckduckgo.com/iu/?u=http%3A%2F%2Ficons.iconarchive.com%2Ficons%2Fxenatt%2Fthe-circle%2F256%2FApp-Twitter-icon.png&f=1" alt="twitter logo" />
+            </a>
+
+            <a href="https://blog.digitalronin.com">
+              <img height="24" width="24" src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fi0.wp.com%2Fwordpressfoundation.org%2Fcontent%2Fuploads%2F2015%2F03%2Fsite_icon1-54f3ce9bv1_site_icon.png%3Ffit%3D512%252C512%26ssl%3D1&f=1" alt="wordpress logo" />
+            </a>
+          </div>
+
+
           <div class='card'>
             <div class='card-body'>
               <div class="card-title">
