--- a/home.html
+++ b/home.html
@@ -89,6 +89,28 @@
                       <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_53b6dd8cd26f64b549eabac4f_425fff70ac" tabindex="-1" value=""></div>
                       <div class="clear">
                         <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary btn-sm">Subscribe</button>
+                        <!-- Radio Group -->
+                        <div class="form-check">
+                        <input class="form-check-input" type="radio" name="gender" id="gender_male" value="male" checked>
+                        <label class="form-check-label" for="gender_male">
+                          Male
+                        </label>
+                      </div>
+
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="gender" id="gender_female" value="female" checked>
+                        <label class="form-check-label" for="gender_female">
+                          Female
+                        </label>
+                      </div>
+
+
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="gender" id="gender_other" value="other" checked>
+                        <label class="form-check-label" for="gender_other">
+                          Other
+                        </label>
+                      </div>
                       </div>
                     </div>
                   </form>
@@ -109,4 +131,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   <script type="text/javascript" src="application.js"></script></body>
+
+
 </html>
